--- a/backend/package.json
+++ b/backend/package.json
@@ -6,9 +6,16 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "amqp": "^0.2.7",
+    "axios": "^0.21.1",
+    "cheerio": "^1.0.0-rc.5",
+    "config": "^3.3.3",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "express": "~4.16.1",
-    "morgan": "~1.9.1"
+    "express-validator": "^6.9.2",
+    "mongoose": "^5.11.17",
+    "morgan": "~1.9.1",
+    "validatorjs": "^3.22.1"
   }
 }
