finish dedicated crawler worker w/ docker build

--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,7 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
-    "amqp": "^0.2.7",
+    "amqplib": "^0.6.0",
     "axios": "^0.21.1",
     "cheerio": "^1.0.0-rc.5",
     "config": "^3.3.3",
